<resources>
    <string name="app_name">Decentralized Library</string>

    <string name="title_section1">My Library</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Borrowing</string>
    <string name="title_section4">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_action">Search</string>
    <string name="filter_action">Filter</string>
    <string name="request_action">Request</string>

    <string name="requests_label">Requests</string>
    <string name="requested_label">Requested</string>
    <string name="approved_label">Approved</string>
    <string name="lent_label">Lent</string>

    <string name="experimenter_label">For Experimenter Use Only!</string>
    <string name="title_activity_details">Book Details</string>

    <string name="title_activity_friends_library">Friend\'s Library</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
